--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-dash==2.4.1
-dash_bootstrap_components==1.1.0
-Flask==2.1.2
-Flask_RESTful==0.3.9
 joblib==1.1.0
-numpy  #==1.20.2
-pandas  #==1.4.2
-python-decouple==3.6
-requests==2.25.1
-scikit_learn==1.1.3
+numpy==1.20.2
+pandas==1.4.2
+scikit_learn==1.2.1
+setuptools==62.1.0
 TPOT==0.11.7
